@@ -1,3 +1,7 @@
+2008-02-10 Raphael Neider <rneider AT web.de>
+
+	* device/include/pic16/pic18f*.h: add bit aliases in INTCONbits_t
+
 2008-02-09 Raphael Neider <rneider AT web.de>
 
 	* src/pic16/pcode.c (assignToSameBank): add force argument to ignore
